--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,11 @@ body{
   color: white;
   font-size: 1rem;
 }
+
+.hidden{
+  display: none;
+}
+
+/* input[type="checkbox"]:checked+label  {
+  display: none;
+} */
